# SentinelTranslate

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml
api/: .dockerignore  Dockerfile  Makefile  README.md  app.py  example_usage.py  pyproject.toml
examples/: 01_french_to_english.ipynb  02_spanish_to_english.ipynb  03_german_to_english.ipynb  04_italian_to_english.ipynb  05_portuguese_to_english.ipynb  06_russian_to_english.ipynb  07_chinese_to_english.ipynb  08_japanese_to_english.ipynb  09_arabic_to_english.ipynb  10_korean_to_english.ipynb  README.md
examples/batch_translation/: README.md  batch_s3_example.ipynb  generate_sample_data.py
examples/model_conversion/: README.md  convert_opus_to_onnx.ipynb
icu-service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TEST_SUITE_SUMMARY.md  app.py  config.py  icu_operations.py  models.py  pyproject.toml
icu-service/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
icu-service/pyspark_integration/: README.md  __init__.py  client.py  example_pipeline.py  udfs.py
icu-service/tests/: __init__.py  conftest.py  test_app.py  test_icu_operations.py  test_models.py
infrastructure/: ECR_SETUP.md  build-and-push.sh  push-to-ecr.sh
infrastructure/helm/sentineltranslate/: .helmignore  Chart.yaml  INSTALL.md  MONITORING.md  MONITORING_SUMMARY.md  Makefile  README.md  SUMMARY.md  validate.sh  values-dev.yaml  values-monitoring-dev.yaml  values-monitoring.yaml  values-prod.yaml  values.yaml
infrastructure/helm/sentineltranslate/dashboards/: README.md  overview.json
infrastructure/helm/sentineltranslate/docs/runbooks/: README.md  sidecar-down.md  worker-high-queue.md
infrastructure/helm/sentineltranslate/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-service.yaml  grafana-dashboards-configmap.yaml  hpa.yaml  ingress.yaml  pdb.yaml  prometheusrule.yaml  serviceaccounts.yaml  servicemonitor.yaml  sidecar-deployment.yaml  sidecar-service.yaml  triton-deployment.yaml  triton-service.yaml  worker-deployment.yaml  worker-service.yaml
infrastructure/terraform/: .gitignore  ARCHITECTURE.md  COST_OPTIMIZATION.md  DEPLOYMENT.md  FILES_SUMMARY.md  Makefile  QUICKSTART.md  README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
lang-detect-service/: Dockerfile  Makefile  README.md  app.py  docker-compose.yml  download_models.py  pyproject.toml
lang-detect-service/k8s/: deployment.yaml  hpa.yaml  pvc.yaml  service.yaml
ner-service/: .dockerignore  AIRGAP.md  Dockerfile  Dockerfile.s3  Makefile  README.md  app.py  docker-compose.yml  download_all_models.py  download_models_from_s3.py  pyproject.toml  upload_models_to_s3.py
ner-service/k8s/: deployment.yaml  pvc.yaml  service.yaml
sidecar/: Dockerfile  Makefile  app.py  client_triton.py  hallucination.py  langdetectcheck.py  language_codes.py  language_id.py  nercheck.py  postprocessing.py  preprocessing.py  pyproject.toml
sidecar/tests/: __init__.py  test_hallucination_multilang.py  test_nercheck.py
triton/: .dockerignore  Dockerfile  Dockerfile.convert  Makefile  ONNX_CONVERSION.md  README.md  README_ONNX.md  convert_opus_to_onnx.py  download_model.py  download_nllb.py  download_opus_onnx.py  pyproject.toml  triton_config_generator.py
triton/model-repository/nllb-200-distilled-600m/: README.txt  config.pbtxt
triton/model-repository/opus-mt-ar-en/: config.pbtxt
triton/model-repository/opus-mt-bg-en/: config.pbtxt
triton/model-repository/opus-mt-bn-en/: config.pbtxt
triton/model-repository/opus-mt-cs-en/: config.pbtxt
triton/model-repository/opus-mt-da-en/: config.pbtxt
triton/model-repository/opus-mt-de-en/: config.pbtxt
triton/model-repository/opus-mt-el-en/: config.pbtxt
triton/model-repository/opus-mt-es-en/: config.pbtxt
triton/model-repository/opus-mt-et-en/: config.pbtxt
triton/model-repository/opus-mt-fa-en/: config.pbtxt
triton/model-repository/opus-mt-fi-en/: config.pbtxt
triton/model-repository/opus-mt-fr-en/: config.pbtxt
triton/model-repository/opus-mt-he-en/: config.pbtxt
triton/model-repository/opus-mt-hi-en/: config.pbtxt
triton/model-repository/opus-mt-hr-en/: config.pbtxt
triton/model-repository/opus-mt-hu-en/: README.txt  config.pbtxt
triton/model-repository/opus-mt-id-en/: config.pbtxt
triton/model-repository/opus-mt-it-en/: config.pbtxt
triton/model-repository/opus-mt-ja-en/: config.pbtxt
triton/model-repository/opus-mt-ko-en/: config.pbtxt
triton/model-repository/opus-mt-lt-en/: config.pbtxt
triton/model-repository/opus-mt-lv-en/: config.pbtxt
triton/model-repository/opus-mt-ms-en/: config.pbtxt
triton/model-repository/opus-mt-nl-en/: config.pbtxt
triton/model-repository/opus-mt-no-en/: config.pbtxt
triton/model-repository/opus-mt-pl-en/: config.pbtxt
triton/model-repository/opus-mt-pt-en/: config.pbtxt
triton/model-repository/opus-mt-ro-en/: config.pbtxt
triton/model-repository/opus-mt-ru-en/: config.pbtxt
triton/model-repository/opus-mt-sk-en/: config.pbtxt
triton/model-repository/opus-mt-sl-en/: config.pbtxt
triton/model-repository/opus-mt-sr-en/: config.pbtxt
triton/model-repository/opus-mt-sv-en/: config.pbtxt
triton/model-repository/opus-mt-ta-en/: config.pbtxt
triton/model-repository/opus-mt-te-en/: config.pbtxt
triton/model-repository/opus-mt-th-en/: config.pbtxt
triton/model-repository/opus-mt-tr-en/: config.pbtxt
triton/model-repository/opus-mt-uk-en/: config.pbtxt
triton/model-repository/opus-mt-ur-en/: config.pbtxt
triton/model-repository/opus-mt-vi-en/: config.pbtxt
triton/model-repository/opus-mt-zh-en/: config.pbtxt
worker/: Dockerfile  Makefile  cache.py  celery_app.py  client_triton.py  hallucination.py  nercheck.py  numcheck.py  postprocess.py  preprocess.py  pyproject.toml  tasks.py  test_hallucination_multilang.py  test_nercheck.py
worker/tests/: __init__.py  test_cache.py  test_celery_app.py  test_tasks.py
