[project]
name = "translation-frontend"
version = "0.1.0"
description = "FastAPI frontend for batch translation jobs from S3 parquet files"
requires-python = ">=3.11"

classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "celery",
    "redis",
    "prometheus-fastapi-instrumentator", # Prometheus metrics instrumentation
]

[project.optional-dependencies]
dev = [
  "ruff",
  "basedpyright",
  "pytest",
  "httpx",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
lint.select = ["E","F","I","N","UP","B","A","C4"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["frontend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingImports = false
reportMissingTypeStubs = false
pythonVersion = "3.11"
include = ["."]
exclude = ["**/tests/","**/build/","**/__pycache__/,**/.venv"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.app]
module = "app:app"
host = "0.0.0.0"
port = 8090
reload = true

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
