[project]
name = "ner-service"
version = "0.1.0"
description = "Multi-language NER microservice using spaCy"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "spacy>=3.8.0",
    "stanza>=1.8.0",
    "boto3>=1.34.0",
]

[dependency-groups]
dev = ["ruff", "basedpyright"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"
lint.select = ["E", "F", "I", "N", "UP", "B", "A", "C4"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingImports = false
reportMissingTypeStubs = false
pythonVersion = "3.11"
include = ["."]
exclude = ["**/__pycache__/"]
