[project]
name = "translation-sidecar"
version = "0.1.0"
description = "FastAPI gateway for OPUS-MT Triton translation with hallucination detection"
requires-python = ">=3.10"

classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "tritonclient[http]",
    "prometheus-fastapi-instrumentator", # Prometheus metrics instrumentation
    "langid", # Language detection for hallucination checks
    "spacy", # NER for hallucination checks
    "nltk", # Sentence tokenization
]

[project.optional-dependencies]
# Development dependencies
dev = [
  "ruff",
  "basedpyright",
  "pytest",
]

[tool.ruff]
line-length = 140
indent-width = 4
target-version = "py311"
lint.select = ["E","F","I","N","UP","B","A","C4"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["sidecar"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingImports = false
reportMissingTypeStubs = false
pythonVersion = "3.11"
include = ["."]
exclude = ["**/tests/","**/build/","**/__pycache__/,**/.venv"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.app]
module = "app:app"
host = "0.0.0.0"
port = 8080
reload = true

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
